--- a/hw6/style.css
+++ b/hw6/style.css
@@ -44,7 +44,7 @@
   flex-direction: row;
   flex-wrap: nowrap;
   align-content: center;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   gap: 63px;
   gap: 63px;
@@ -248,14 +248,6 @@
   height: 420px;
 }
 
-.img__c2 {
-  transition: all 0.3s ease;
-  position: relative;
-}
-
-.img__c2:hover {
-}
-
 .p__end__c2 {
   color: #f26376;
   font-family: Lato;
@@ -270,10 +262,238 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-bottom: 95px;
 }
 
 .a__header4 {
   display: none;
+}
+
+.top__footer {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  background-color: #222224;
+}
+
+.div__top__footer1,
+.div__top__footer2,
+.div__top__footer3 {
+  width: 360px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  margin-top: 104px;
+  margin-bottom: 104px;
+}
+
+.h3__top__footer1,
+.h3__top__footer2,
+.h3__top__footer3 {
+  color: #fbfbfb;
+  font-family: Lato;
+  font-size: 19.96px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-top: 20px;
+  margin-bottom: 16px;
+}
+
+.p__top__footer {
+  color: #fbfbfb;
+  text-align: center;
+  font-family: Lato;
+  font-size: 13.972px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+}
+
+.main__footer {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.bg__main__footer {
+  opacity: 0.6;
+  position: absolute;
+  height: 100%  ;
+  width: 100%;
+  
+}
+
+.div__main__footer1,
+.div__main__footer2 {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 126px;
+  margin-top: 97px;
+  position: relative;
+}
+
+.div__main__footer1 {
+  width: 360px;
+}
+
+.div__main__footer2 {
+  width: 557px;
+}
+
+.p__main__footer1 {
+  color: #222224;
+  text-align: center;
+  font-family: Lato;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-top: 30px;
+}
+
+.word1__main__footer {
+  color: #222224;
+  font-family: Lato;
+  font-size: 20px;
+  font-style: italic;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.p__main__footer2 {
+  color: #222224;
+  font-family: Lato;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 167.2%;
+  margin-bottom: 30px;
+}
+
+.word2__main__footer {
+  color: #222224;
+  text-align: center;
+  font-family: Lato;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 167.2%; /* 40.128px */
+}
+
+form {
+  display: flex;
+}
+
+.input__main__footer {
+  width: 322.59px;
+  height: 49px;
+  background-color: #e1e1e1;
+  border: none;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex-shrink: 0;
+  color: #222224;
+  font-family: Lato;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  opacity: 0.671;
+  position: relative;
+}
+
+button {
+  position: absolute;
+  right: 100px;
+  border: none;
+  background-color: #e05c6e;
+  display: flex;
+  width: 100px;
+  height: 49px;
+  flex-direction: column;
+  justify-content: center;
+  color: #fff;
+  text-align: center;
+  font-family: Lato;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  border-radius: 0px 15px 15px 0px;
+  z-index: 100;
+  align-items: center;
+}
+
+.down__footer {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: center;
+  align-items: center;
+  justify-content: space-around;
+  background-color: #222224;
+}
+
+.p__down__footer {
+  color: #fbfbfb;
+  font-family: Lato;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.div__down__footer2 {
+  margin-top: 24px;
+  margin-bottom: 24px;
+  gap: 8px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+}
+
+.div__img__div__down__footer {
+  height: 32px;
+  width: 32px;
+  background: url(img/Rectangle\ 14.svg);
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  flex-direction: row;
+  display: flex;
+}
+
+.div__img__div__down__footer2 {
+  background: url(img/Rectangle\ 15.svg);
+  height: 32px;
+  width: 32px;
+  align-content: center;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  flex-direction: row;
 }
 
 @media (max-width: 1024px) {
@@ -386,9 +606,44 @@
   .a__header4 {
     display: none;
   }
+
+  .top__footer {
+    flex-direction: column;
+  }
+
+  .div__top__footer1,
+  .div__top__footer2,
+  .div__top__footer3 {
+    margin-top: 48px;
+    margin-bottom: 0px;
+  }
+
+  .div__top__footer3 {
+    margin-bottom: 64px;
+  }
+
+  .main__footer{
+    flex-direction: column;
+  }
+
+  .div__main__footer1{
+    margin-top: 64px;
+    margin-bottom: 48px;
+  }
+
+  .div__main__footer2{
+    margin-top: 0px;
+    margin-bottom: 140px;
+  }
+
 }
 
 @media (max-width: 767px) {
+  .header {
+    justify-content: space-between;
+    gap: 0px;
+  }
+
   .a__header3 {
     display: none;
   }
@@ -481,4 +736,13 @@
     margin-bottom: 85px;
     margin-top: 40px;
   }
+
+.div__top__footer3{
+  margin-bottom: 81px;
+}
+
+.div__main__footer2{
+  margin-bottom: 109px;
+}
+
 }
