--- a/hw2.2/styles/_contents.scss
+++ b/hw2.2/styles/_contents.scss
@@ -1,4 +1,3 @@
-
 .content2 {
   display: flex;
   flex-direction: column;
@@ -29,23 +28,54 @@
   margin-bottom: 48px;
 }
 
-
-.filter-sort{
+.filter-sort {
+  position: relative;
   display: flex;
 }
 
-.filter__summary{
+.filter {
+  display: flex;
+  gap: 11px;
+  align-items: center;
+  position: absolute;
+  &__summary {
     display: flex;
+    align-items: center;
     gap: 11px;
   }
 
+  &[open] {
+    background: #fff;
+    width: 360px;
+    height: 531px;
+    box-shadow: 6px 4px 35px rbga(0, 0, 0, 0.21);
+    box-sizing: border-box;
+  }
 
-.filter__sorting {
-  margin-left: 320px;
-  display: flex;
-  gap: 27px;
+  &[open] .filter__summary {
+    color: $colorSite;
+  }
+
+  &[open] path {
+    fill: $colorSite;
+  }
+
+  &__item {
+    display: flex;
+    position: absolute;
+    &[open] .item__summary {
+      color: $colorSite;
+    }
+  
+    
+  }
+
+  &__sorting {
+    margin-left: 320px;
+    display: flex;
+    gap: 27px;
+  }
 }
-
 
 .blocks__content2 {
   display: grid;
