--- a/hw2.3/styles/_contents.scss
+++ b/hw2.3/styles/_contents.scss
@@ -1,3 +1,13 @@
+.contents {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  gap: 145px;
+}
+
 .cart {
   margin-top: 96px;
   display: flex;
@@ -6,9 +16,9 @@
 
   &__block {
     display: flex;
-    filter: drop-shadow(17px 19px 24px rgba(0, 0, 0, 0.13));
-    // width: 652px;
-    // height: 306px;
+    box-shadow: 17px 19px 24px rgba(0, 0, 0, 0.13);
+    width: 652px;
+    height: 306px;
     gap: 32px;
   }
 
@@ -24,11 +34,32 @@
     display: flex;
     gap: 57px;
     align-items: center;
+    padding-right: 22px;
+    transition: 0.3;
+  }
+
+  &__head:hover {
+    color: $colorSite;
+  }
+
+  &__close:hover path {
+    fill: $colorSite;
   }
 
   &__description {
     font-size: 22px;
     font-weight: 400;
+    padding-bottom: 62px;
+  }
+
+  &__price {
+    color: $colorSite;
+  }
+
+  &__input {
+    width: 44px;
+    height: 25px;
+    text-align: center;
   }
 
   &__buttons {
@@ -40,12 +71,110 @@
   &__button {
     border: 1px solid #a4a4a4;
     margin-bottom: 128px;
-    padding: 16px 40px;
     transition: 0.3;
+    width: 225px;
+    height: 50px;
+    font-size: 14px;
+    font-weight: 300;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
-  
+
   &__button:hover {
     color: white;
     background-color: $colorSite;
+  }
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 57px;
+  margin-top: -200px;
+
+  &__formalization {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  &__heading {
+    font-size: 16px;
+    font-weight: 300;
+  }
+
+  &__input {
+    width: 360px;
+    height: 45px;
+    font-size: 13px;
+    font-weight: 300;
+    padding: 0 20px;
+  }
+
+  &__button {
+    font-size: 11px;
+    font-weight: 300;
+    width: 100px;
+    height: 35px;
+    background: white;
+    transition: 0.3;
+  }
+
+  &__button:hover {
+    color: white;
+    background: $colorSite;
+  }
+
+  &__confirmation {
+    background: #f5f3f3;
+    width: 360px;
+    height: 214px;
+  }
+
+  &__sub {
+    font-size: 11px;
+    font-weight: 400;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    gap: 11px;
+    margin-bottom: 12px;
+    margin-top: 39px;
+    margin-right: 15px;
+  }
+
+  &__total {
+    display: flex;
+    flex-direction: row;
+    font-size: 16px;
+    font-weight: 700;
+    justify-content: flex-end;
+    gap: 11px;
+    margin-bottom: 21px;
+    margin-right: 15px;
+    &__price {
+      color: $colorSite;
+    }
+  }
+
+  &__confirm {
+    width: 273px;
+    height: 50px;
+    background: $colorSite;
+    margin-left: 44px;
+    color: white;
+    border: none;
+    transition: 0.3;
+  }
+  &__confirm:hover {
+    background: white;
+    color: black;
+    border: 1px solid black;
   }
 }
