--- a/styles/_index__content.scss
+++ b/styles/_index__content.scss
@@ -5,7 +5,7 @@
   flex-direction: row;
   flex-wrap: nowrap;
   align-content: center;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   gap: 63px;
   &__image {
@@ -61,7 +61,6 @@
     justify-content: center;
     align-items: center;
     transition: 0.3s;
-
   }
   &__for_women:hover {
     opacity: 0.7;
@@ -89,7 +88,6 @@
     justify-content: center;
     align-items: center;
     transition: 0.3s;
-
   }
   &__for_kids:hover {
     opacity: 0.7;
@@ -110,23 +108,22 @@
     position: relative;
   }
 
-  &__accesories::before{
-      content: '';
-      display: block;
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background-color:rgba(33, 22, 22, 0.70);
-    
+  &__accesories::before {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(33, 22, 22, 0.7);
   }
   &__accesories:hover {
     opacity: 0.7;
   }
-  
+
   &__description {
     color: #fff;
     text-align: center;
@@ -138,22 +135,20 @@
     align-content: center;
     justify-content: center;
     align-items: center;
-    text-align: center  ;
-    &__assecories{
+    text-align: center;
+    &__assecories {
       display: flex;
       flex-direction: column;
       position: relative;
     }
   }
-  
-  &__heading{
+
+  &__heading {
     color: $colorSite;
     font-size: 24px;
     font-weight: 700;
   }
 }
-
-
 
 .index__blocks {
   display: flex;
@@ -211,6 +206,7 @@
   margin-top: 65px;
   grid-template-columns: 360px 360px 360px;
 }
+
 .index__block {
   width: 360px;
   height: 581px;
@@ -269,5 +265,70 @@
     text-align: center;
     justify-content: center;
     align-items: center;
+  }
+}
+
+@media (max-width: 1024px) {
+  .index__top {
+    gap: 40px;
+    &__image__sub_img {
+      display: none;
+    }
+    &__image {
+      width: 384.786px;
+      height: 369.048px;
+      background: url(/index/img/Layer\ 57.png);
+    }
+
+    &__head {
+      font-size: 24px;
+      &__brand {
+        font-size: 44px;
+      }
+    }
+  }
+  .index__news {
+    margin-top: 20px;
+    margin-bottom: 154px;
+    gap: 18px;
+    grid-template-columns: 232px 232px 232px;
+
+    &__for_women {
+      width: 232px;
+      height: 167px;
+      background-position: center;
+    }
+
+    &__for_men {
+      width: 232px;
+      height: 167px;
+      background-position: center;
+    }
+
+    &__for_kids {
+      width: 232px;
+      height: 167px;
+      background-position: center;
+    }
+
+    &__accesories {
+      width: 736px;
+      height: 116.043px;
+      background-position: center;
+    }
+  }
+
+  .index__blocks {
+    &__browse {
+      margin-top: 35px;
+      margin-bottom: 64px;
+    }
+  }
+
+  .index__block__box {
+    display: grid;
+    gap: 16px;
+    margin-top: 73px;
+    grid-template-columns: 360px 360px;
   }
 }
