--- a/styles/_vars.scss
+++ b/styles/_vars.scss
@@ -1,2 +1,10 @@
 $colorSite: #F16D7F;
 $widthSite: 1140px;
+
+@media(max-width:1024px){
+  $widthSite: 736px;
+}
+
+@media(max-width:425px){
+  $widthSite: 344px;
+}
