--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -221,8 +221,8 @@
       &__section {
         margin-top: 0;
         margin-bottom: 48px;
+      }
     }
-  }
     &__main {
       flex-direction: column;
       gap: 48px;
@@ -239,4 +239,44 @@
       }
     }
   }
+}
+
+@media (max-width: 425px) {
+  .footer {
+    &__top {
+      padding-bottom: 31px;
+    }
+    &__main {
+      gap: 59px;
+      &__quote {
+        &__part1 {
+          font-size: 18px;
+        }
+
+        &__part2 {
+          font-size: 18px;
+        }
+      }
+      &__form {
+        margin-bottom: 110px;
+        &__input {
+          font-size: 14px;
+        }
+        &__button {
+          font-size: 14px;
+        }
+      }
+    }
+    &__down {
+      display: flex;
+      flex-direction: column-reverse;
+    &__social{
+      margin-top: 43px;
+      margin-bottom: 40px;
+    }
+    &__rights{
+      margin-bottom: 9px;
+    }
+  }
+}
 }
