--- a/styles/_catalog__content.scss
+++ b/styles/_catalog__content.scss
@@ -308,6 +308,28 @@
   }
 }
 
-// @media (max-width: 425px) {
+@media (max-width: 425px) {
+  .breadcrumbs__product {
+    flex-direction: column;
+    gap: 32px;
+    padding-top: 24px;
+    padding-bottom: 46px;
+  }
+  .catalog {
+    &__filter__summary__head {
+      display: none;
+    }
+    &__sorting {
+      gap: 24px;
+      margin-top: 50px;
+    }
+    &__blocks {
+      grid-template-columns: 360px;
+    }
+  }
 
-// }
+  .svg__summary {
+    width: 37.5px;
+    height: 25px;
+  }
+}
