--- a/styles/main.css
+++ b/styles/main.css
@@ -1244,6 +1244,28 @@ input::-webkit-inner-spin-button {
     align-items: center;
   }
 }
+@media (max-width: 425px) {
+  .breadcrumbs__product {
+    flex-direction: column;
+    gap: 32px;
+    padding-top: 24px;
+    padding-bottom: 46px;
+  }
+  .catalog__filter__summary__head {
+    display: none;
+  }
+  .catalog__sorting {
+    gap: 24px;
+    margin-top: 50px;
+  }
+  .catalog__blocks {
+    grid-template-columns: 360px;
+  }
+  .svg__summary {
+    width: 37.5px;
+    height: 25px;
+  }
+}
 .index__top {
   background-color: #f1e4e6;
   display: flex;
