--- a/styles/_breadcrumbs__product.scss
+++ b/styles/_breadcrumbs__product.scss
@@ -54,3 +54,12 @@
     font-weight: 300;
   }
 }
+
+@media (max-width: 425px) {
+  .breadcrumbs__product {
+    flex-direction: column;
+    gap: 32px;
+    padding-top: 24px;
+    padding-bottom: 46px;
+  }
+}
