--- a/styles/_index__content.scss
+++ b/styles/_index__content.scss
@@ -165,6 +165,7 @@
     font-weight: 400;
     line-height: normal;
     margin-bottom: 6px;
+ 
   }
   &__description {
     color: #9f9f9f;
@@ -223,6 +224,10 @@
     font-weight: 400;
     margin-top: 25px;
     margin-left: 18px;
+    transition: 0.3s;
+  }
+  &__heading:hover {
+    color: $colorSite;
   }
   &__description {
     color: #5d5d5d;
