--- a/styles/_product__content.scss
+++ b/styles/_product__content.scss
@@ -228,6 +228,10 @@
     &__heading {
       margin-top: 25px;
       margin-left: 18px;
+      transition: 0.3s;
+    }
+    &__heading:hover {
+      color: $colorSite;
     }
     &__details {
       font-weight: 300;
